<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_MechPump" Id="{b87a021b-d769-41f1-b8d2-403538ace2c3}">
    <Declaration><![CDATA[TYPE ST_MechPump :
STRUCT
	//Simulation Parameters
	rMRE	:	REAL; // Mass Removal Efficiency: should be a number less than 1.
	rBasePress	:	REAL := 1E-3;
	rLoad	:	REAL;
	iMaxSpd	:	INT;
	rMaxLoad	:	REAL;
	tonSpd	:	TON;
	tonTemp	:	TON;
	tonOvrLd	:	TON;
	xCooling:	BOOL := FALSE; // hook the cooling active signal here
	srError	:	SR;
	rtResetErr : R_TRIG;
	
	
	//Discrete controls
	i_xIlk	:	BOOL;//allow pump to turn on
	i_xRun	:	BOOL;//actually turn on pump
	
	//Discrete readbacks
	q_xAtSpd	:	BOOL;//whether pump is at top speed
	q_xErr	:	BOOL;//whether pump has an error or faulted
	q_xStart	:	BOOL;//whether pump has started but hasnt reached top speed, returns false when reaches top speeds
	q_xLowSpd	: BOOL;//whether pump is in a lowspeed STATE
	
	//Other Readbacks
	q_iPower	:	INT;
	q_iSpeed	:	INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>